extensions/shipping/FedEx Shipping/objects/Shipping_Provider__mdt/Shipping_Provider__mdt.object-meta.xml
<CustomObject>
    <label>Shipping Provider</label>
    <pluralLabel>Shipping Providers</pluralLabel>
</CustomObject>