extensions/shipping/FedEx Shipping/objects/Shipping_Provider__mdt/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>