extensions/shipping/FedEx Shipping/objects/Shipping_Provider__mdt/fields/Max_Weight_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight_Threshold__c</fullName>
    <label>Max Weight Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>