extensions/shipping/FedEx Shipping/objects/Shipping_Provider__mdt/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Used to store request template for a shipping request</description>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>